<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".CameraActivity">

    <ImageView
        android:id="@+id/main_image"
        android:layout_width="match_parent"
        android:layout_height="400dp"
        android:contentDescription="@string/camera_description" />

    <EditText
        android:id="@+id/tag"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:hint="@string/tag_hint"
        android:inputType="text"
        android:layout_below="@+id/main_image"
        android:layout_alignLeft="@+id/Button_upload"
        android:layout_alignStart="@+id/Button_upload"
        android:layout_alignRight="@+id/Button_upload"
        android:layout_alignEnd="@+id/Button_upload" />

    <Button
        android:id="@+id/Button_upload"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/camera_upload_image"
        android:layout_below="@+id/tag"
        android:layout_centerHorizontal="true" />

</RelativeLayout>













