<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools" android:layout_width="match_parent"
    android:layout_height="fill_parent"
    tools:context=".ProfileActivity"
    android:id="@+id/main"
    android:orientation="vertical">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="fill_parent"
        android:orientation="vertical">

        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="0.7">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <EditText
                    android:id="@+id/aliasText"
                    android:layout_width="fill_parent"
                    android:layout_height="wrap_content"
                    android:hint="@string/tag_hint"
                    android:inputType="text"
                    android:layout_below="@+id/main_image"
                    android:layout_alignLeft="@+id/Button_upload"
                    android:layout_alignStart="@+id/Button_upload"
                    android:layout_alignRight="@+id/Button_upload"
                    android:layout_alignEnd="@+id/Button_upload" />

                <Button
                    android:id="@+id/Button_upload"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/camera_upload_image"
                    android:layout_below="@+id/tag"
                    android:layout_centerHorizontal="true" />

            </LinearLayout>

        </RelativeLayout>
        <RelativeLayout
            android:layout_width="fill_parent"
            android:layout_height="0dip"
            android:layout_weight="0.3">


            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="fill_parent"
                android:orientation="vertical">

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="0.7">
                </RelativeLayout>

                <RelativeLayout
                    android:layout_width="wrap_content"
                    android:layout_height="0dip"
                    android:layout_weight="0.3">

                    <LinearLayout
                        android:layout_width="fill_parent"
                        android:layout_height="wrap_content"
                        android:orientation="horizontal">

                        <RelativeLayout
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33"
                            android:background="#dd02bbdd">

                            <Button
                                android:text="@string/button_random_txt"
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:id="@+id/imageButton"
                                android:textColor="#FFFFFF"
                                android:scaleType="fitCenter"
                                android:contentDescription="@string/button_random_desc"
                                android:drawableLeft="@drawable/ic_action_warning"
                                android:drawableStart="@drawable/ic_action_warning"
                                android:src="@drawable/ic_action_warning"
                                android:adjustViewBounds="false"
                                android:cropToPadding="false"
                                android:background="#E53232"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33">

                            <Button
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:scaleType="fitCenter"
                                android:id="@+id/button"
                                android:background="#E53232"
                                android:textColor="#FFFFFF"
                                android:contentDescription="@string/button_camera_desc"
                                android:drawableLeft="@drawable/ic_action_camera"
                                android:drawableStart="@drawable/ic_action_camera"
                                android:text="@string/button_camera_txt"/>
                        </RelativeLayout>

                        <RelativeLayout
                            android:layout_width="0dip"
                            android:layout_height="wrap_content"
                            android:layout_weight="0.33">
                            <Button
                                android:layout_width="fill_parent"
                                android:layout_height="fill_parent"
                                android:drawableStart="@drawable/ic_action_person"
                                android:drawableLeft="@drawable/ic_action_person"
                                android:text="@string/button_profile_txt"
                                android:scaleType="fitCenter"
                                android:id="@+id/button_profile"
                                android:background="#E53232"
                                android:textColor="#FFFFFF"
                                android:contentDescription="@string/button_profile_desc"/>
                        </RelativeLayout>

                    </LinearLayout>

                </RelativeLayout>

            </LinearLayout>

        </RelativeLayout>

    </LinearLayout>

</LinearLayout>
